bpo-41531: Fix compilation of dict literals with more than 0xFFFF elements (GH-21850)